[project]
name = "quantum-bayes-theorem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pennylane>=0.45.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
